syntax = "proto3";

package project;

service Project {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
}

message ListRequest {
}

message ListResponse {
    uint32 status = 1;
    repeated ProjectItem projects = 2;
}

message CreateRequest {
    string name = 1;
    string description = 2;
}

message CreateResponse {
    uint32 status = 1;
    string uuid = 2; //format - UUID
}

message ReadRequest {
    string uuid = 1; //format - UUID
}

message ReadResponse {
    uint32 status = 1;
    ProjectItem project = 2;
}

message UpdateRequest {
    string uuid = 1; //format - UUID
    string name = 2;
    string description = 3;
}

message UpdateResponse {
    uint32 status = 1;
}

message ProjectItem {
    string uuid = 2; //format - UUID
    string name = 3;
    string description = 4;
}
